[package]
name = "tigers-eye-mvp"
version = "0.1.0"
authors = ["Daniel Fitchmun <daniel@somatek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
chrono = { version ="0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"